Z-index fix

--- a/styles/modules/gallery.scss
+++ b/styles/modules/gallery.scss
@@ -32,7 +32,7 @@ $module: 'listing__gallery';
 	position: absolute;
 	bottom: 15px;
 	width:100%;
-	z-index: $space;
+	z-index: $high;
 }
 
 .unslider-nav ol {
