--- a/styles/style.css
+++ b/styles/style.css
@@ -297,7 +297,7 @@
   position: absolute;
   bottom: 15px;
   width: 100%;
-  z-index: 99;
+  z-index: 75;
 }
 
 .unslider-nav ol {
